Fix minor styling glitch on mobile.

--- a/public/styles/land.scss
+++ b/public/styles/land.scss
@@ -16,6 +16,7 @@
     display: inline-block;
     flex-grow: 1;
     margin: 20px;
+    width: 100%;
   }
   .col.image {
     order: 1;
